Fix demo transaction title size on small mobile screen

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -612,6 +612,11 @@ fieldset {
   .video-container {
     width: 100%;
   }
+  
+  .small-demo-title {
+    font-size: 40px;
+    width: 90%;
+  }
 }
 
 @media #{$medium-up} {
